--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {text-align: center;}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+nav a {background-color: gray;
+padding-right: 10px;
+padding-right: 10px;
+}
+figcaption {text-align: center;
+font-size: 15px;
+}
+#featured-property p {width: 800px;
+text-align: center;
+}
+#details {display: block}
+#details div {float: left;
+background-color: gray;
+width: 25%;
+}
+
+
