--- a/style.css
+++ b/style.css
@@ -4,5 +4,43 @@ body {
   margin: 0;
 }
 
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+nav, figcaption {
+  text-align: center;
+}
+
+nav a {
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #00FFFF;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+#details div {
+  display: block;
+  float: left;
+  text-align: center;
+  background-color: #00FFFF;
+  width: 25%;
+}
+
+
 
 
