--- a/style.css
+++ b/style.css
@@ -1,4 +1,39 @@
+header {
+  text-align: center;
+}
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
 
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #00FF00;
+}
 
+#featured-property figcaption {
+  text-align: center;
+  font-size: 13px
+}
+
+#featured-property p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  text-align: center;
+}
+
+#details div {
+  display: block;
+  float: left;
+  background-color: #FF9966;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
 
