--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+nav > a {
+  background-color: lightgray;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 80%
+}
+  
+#featured-property > p {
+  width : 800px ;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+#details {
+  display:block;
+}
+
+#details > div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%
+}
+/*
+
+- **As a finishing touch**: Let's clean up the `<div>`s at the bottom of the page. All of them should have the same background color, centered text, and occupy 25% of the `width` of the bottom row (since we have 4 divs).*/
